--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+.add-feedback-btn{
+  padding: 10px;
+  border-radius: 4px;
+  border: none;
+  background-color: #282c34;
+  color: #fff;
+  cursor: pointer;
+}
+
